@@ -1,3 +1,7 @@
+Mon Nov 21 19:18:15 EET 2005 Pekka Riikonen <priikone@silcnet.org>
+
+	* Added SILC_ATTRIBUTE_USER_ICON to lib/silccore/silcattrs.[ch].
+
 Sun Nov 20 19:13:35 EET 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Removed callback system from SilcMimeAssembler.  Return
